--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section); 
+    overflow: hidden;
 }
 
 .flex{
@@ -80,6 +81,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 
 .primary-button:hover{
@@ -117,6 +119,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 
 .company-logo img{
@@ -132,7 +135,9 @@ ul{
     gap: 40px;
 }
 
-
+.nav-toggle{
+    display: none;
+}
 
 /* Header */
 
@@ -158,7 +163,7 @@ header{
 }
 
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 
 /* Companies Section */
@@ -170,8 +175,9 @@ header{
 }
 
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap ;
+    gap: 20px;
 }
 
 .logo{
@@ -189,6 +195,7 @@ header{
 
 .features-header{
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .features-header h2{
@@ -198,7 +205,7 @@ header{
 .features-area{
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 40px;
+    gap: 20px;
     margin-top: 20px;
 }
 
@@ -223,6 +230,10 @@ header{
     gap: 30px;
 }
 
+#second-big-feature{
+    flex-direction: row-reverse;
+}
+
 .feature-img img{
     width: 100%;
 }
@@ -234,8 +245,12 @@ header{
 
 /* examples section */
 
+.examples-section{
+    padding: 80px var(--padding-inline-section);
+}
+
 .examples-header{
-    /* text-align: center; */
+    text-align: center;
     flex-direction: column;
     gap: 20px;
 }
@@ -243,12 +258,13 @@ header{
 .examples-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 
 .examples-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8)), url(images\cover_tasks.jpg);
     background-size: cover;
@@ -288,6 +304,7 @@ header{
     flex-direction: column;
     gap: 30px;
     color: white ;
+    text-align: center;
 }
 
 .cta-section{
@@ -329,4 +346,5 @@ footer{
 .sub-footer-container{
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
